# vdif-qlook

./: README.md  pyproject.toml  vdif-convert  vdif-qlook  vdif_reader.py
scripts/: setup
