[tool.poetry]
name = "vdif-qlook"
version = "0.1.0"
description = "Quick look for VDIF"
authors = ["Masato Hagimoto <hagimoto@a.phys.nagoya-u.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.2"
numpy = "^1.18"

[tool.poetry.dev-dependencies]
black = "^20.8b"
flake8 = "^3.8"
ipython = "^7.16"
pytest = "^6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
